---------------------------------------------------------------------------------------------------
Version: 1.3.1

  Changes:
    - Update Computer Entity (Fix energy consumption and energy buffer capacity)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 13. 12. 2017
  Changes:
    - Update for Factorio 0.16
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 08. 12. 2017
  Features:
    - Add os.require(filepath): load and run subscript in another file (your custom library file)
  Minor Features:
    - Add support of wire name in "string". ex: "lan.readLeftSignal('red')"
  Changes:
    - Update "table.tostring" (and term.write): Support of circular table definition
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 05. 12. 2017
  Bugfixes:
    - Fix error in _readCombinatorSignal if network.signals is empty
  Minor Features:
    - Add Alias: getLeftSignals, getRightSignals, setLeftSignals, setRightSignals
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 02. 12. 2017
  Bugfixes:
    - Fix serialization error (https://github.com/Relik77/factorio_computer_core/issues/1#issue-278003158)
  Minor Features:
    - add os apis: os.set("name", ...args), os.get("name"), os.clear("name")
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 27. 11. 2017
  Major Features:
    - Add computer entity
  Features:
    - Add LAN (Circuit Network) and WLAN (Wireless Network) APIs
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 09. 11. 2017
  Features:
    - Add inline command "position"
    - Add waypoints support