@@ -2,8 +2,11 @@
 open-computer=Open computer console
 
 [entity-name]
+computer-lamp=Computer lamp
 computer-interface-entity=Computer
 computer-combinator=Circuit network connector
+computer-speaker-combinator=Computer speaker combinator
+computer-speaker=Computer speaker
 
 [entity-description]
 computer-interface-entity=Allows you to run lua code and interact with the circuit network
@@ -28,3 +31,6 @@ computer-technology=Computer
 [technology-description]
 computer-gauntlet-technology=You have a laptop built into your gauntlet, giving you the ability to write Lua programs on any item with a computer. Files can also be store on yourself.
 computer-technology=Allows you to run lua code and interact with the circuit network
+
+[virtual-signal-name]
+signal-music-note=Music note
