@@ -18,55 +18,31 @@ data:extend({{
     subgroup = "grass",
     order = "b[decorative]-k[stone-rock]-a[big]",
     collision_box = { { -1.2, -0.65 }, { 1.2, 0.65 } },
-    selection_box = { { -1.5, -1 }, { 1.5, 1 } },
+    collision_mask = {"doodad-layer"},
+    selection_priority = 0,
+    selection_box = {{-0.0, -0}, {0, 0}},
     energy_source = {
         type = "electric",
-        usage_priority = "secondary-input",
-        buffer_capacity = "5MJ"
+        usage_priority = "secondary-input"
     },
-    energy_usage_per_tick = "50KW",
+    energy_usage_per_tick = "2KW",
     light = {
         intensity = 0.4,
         size = 5
     },
 
-    minable = {
-        mining_time = 2,
-        result = "computer-item",
-        count = 1
-    },
-
     enable_gui = false,
 
-    mined_sound = { filename = "__base__/sound/deconstruct-bricks.ogg" },
-    max_health = 250,
+    max_health = 10000,
+    healing_per_tick = 10000,
     corpse = "medium-remnants",
     resistances = {
     },
 
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
 
-    picture_off = {
-        filename = "__base__/graphics/entity/small-lamp/lamp.png",
-        priority = "high",
-        width = 250,
-        height = 200,
-        frame_count = 1,
-        axially_symmetrical = false,
-        direction_count = 1,
-        shift = { 2.1, -1.1 },
-        scale = 1
-    },
-    picture_on = {
-        filename = "__computer_core__/graphics/blank.png",
-        priority = "high",
-        width = 1,
-        height = 1,
-        frame_count = 1,
-        axially_symmetrical = false,
-        direction_count = 1,
-        shift = { 0.0, 0.0 },
-    },
+    picture_off = blank,
+    picture_on = blank
 }, {
     type = "electric-energy-interface",
     name = "computer-interface-entity",
@@ -77,6 +53,7 @@ data:extend({{
     order = "b[decorative]-k[stone-rock]-a[big]",
     collision_box = { { -1.2, -0.65 }, { 1.2, 0.65 } },
     selection_box = { { -1.5, -1 }, { 1.5, 1 } },
+    drawing_box = { { -1.5, -2.5 }, { 1.5, 1 } },
     energy_source = {
         type = "electric",
         usage_priority = "primary-input",
@@ -214,4 +191,117 @@ data:extend({{
         }
     },
     circuit_wire_max_distance = 10
+}, {
+    type = "constant-combinator",
+    name = "computer-speaker-combinator",
+    icon = "__base__/graphics/icons/constant-combinator.png",
+    icon_size = 32,
+    flags = {"placeable-player", "player-creation", "placeable-off-grid", "not-deconstructable"},
+    order = "y",
+    max_health = 10000,
+    healing_per_tick = 10000,
+    corpse = "small-remnants",
+    collision_box = {{-0.0, -0.0}, {0.0, 0.0}},
+    collision_mask = {"doodad-layer"},
+    selection_priority = 100,
+    selection_box = {{-0.0, -0}, {0, 0}},
+    item_slot_count = 1,
+    sprites =
+    {
+        north = blank,
+        east = blank,
+        south = blank,
+        west = blank
+    },
+    activity_led_sprites =
+    {
+        north = blank,
+        east = blank,
+        south = blank,
+        west = blank
+    },
+    activity_led_light =
+    {
+        intensity = 0,
+        size = 1,
+    },
+    activity_led_light_offsets =
+    {
+        {0, 0},
+        {0, 0},
+        {0, 0},
+        {0, 0}
+    },
+    circuit_wire_connection_points =
+    {
+        {
+            shadow = { green = {-0.0, -0.0}, red = {0.0, 0.0}, },
+            wire = { green = {-0.0, -0.0}, red = {0.2, -0.7}, }
+        },
+        {
+            shadow = { green = {-0.0, -0.0}, red = {0.0, 0.0}, },
+            wire = { green = {-0.0, -0.0}, red = {0.2, -0.7}, }
+        },
+        {
+            shadow = { green = {-0.0, -0.0}, red = {0.0, 0.0}, },
+            wire = { green = {-0.0, -0.0}, red = {0.2, -0.7}, }
+        },
+        {
+            shadow = { green = {-0.0, -0.0}, red = {0.0, 0.0}, },
+            wire = { green = {-0.0, -0.0}, red = {0.2, -0.7}, }
+        }
+    },
+    circuit_wire_max_distance = 10
+}, {
+    type = "programmable-speaker",
+    name = "computer-speaker",
+    icon = "__base__/graphics/icons/programmable-speaker.png",
+    icon_size = 32,
+    flags = {"placeable-player", "player-creation", "placeable-off-grid", "not-deconstructable"},
+    order = "y",
+    max_health = 10000,
+    healing_per_tick = 10000,
+    corpse = "small-remnants",
+    collision_box = { { -1.2, -0.65 }, { 1.2, 0.65 } },
+    collision_mask = {"doodad-layer"},
+    selection_priority = 0,
+    selection_box = {{-0.0, -0}, {0, 0}},
+    energy_source =
+    {
+        type = "electric",
+        usage_priority = "secondary-input"
+    },
+    energy_usage_per_tick = "2KW",
+
+    sprite =
+    {
+        layers =
+        {
+            blank,
+            blank
+        }
+    },
+
+    audible_distance_modifier = 2, --multiplies the default 40 tiles of audible distance by this number
+    maximum_polyphony = 10, --maximum number of samples that can play at the same time
+
+    instruments = data.raw["programmable-speaker"]["programmable-speaker"].instruments,
+
+    circuit_wire_connection_point = {
+        shadow = { green = {-0.0, -0.0}, red = {0.0, 0.0}, },
+        wire = { green = {0.0, 0.0}, red = {0.2, -0.7}, }
+    },
+    circuit_wire_max_distance = 10
+}, {
+    type = "item-subgroup",
+    name = "virtual-music-signal",
+    group = "signals",
+    order = "1",
+}, {
+    type = "virtual-signal",
+    name = "signal-music-note",
+    icon = "__computer_core__/graphics/icons/note-icon.png",
+    icon_size = 32,
+    subgroup = "virtual-music-signal",
+    order = "a-a"
 }})
