@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
-
+Date: 16. 12. 2017
+  Major Features:
+    - Add speaker API, computer can play music and issue map alerts
   Changes:
     - Update Computer Entity (Fix energy consumption and energy buffer capacity)
+    - Support Factorio 0.16 native changelog features.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 13. 12. 2017
